# review-ui

./: CLAUDE.md  README.md  compare_results.py  main.py  pyproject.toml
app/: api.py  models.py  papers.py
app/static/: app.js  style.css
papers/2018.01.003/: 2018.01.003.md  2018.01.003.pdf.tei.xml  2018.01.003_segmented.pdf.tei.xml  compare_results_report.json
papers/2018.01.003/20260407_pymupdf4llm_anthropic/: claims.json  eval_llm.json  metrics_eval_openeval.json  metrics_extract.json
papers/2018.01.003/20260407_segmented_anthropic/: claims.json  eval_llm.json  metrics_eval_openeval.json  metrics_extract.json
papers/2018.01.003/20260407_unsegmented_anthropic/: claims.json  eval_llm.json  metrics_eval_openeval.json  metrics_extract.json
papers/2024.04.22.590194/: 2024.04.22.590194.source.xml
papers/2024.04.22.590194/20260206_anthropic/: claims_20260206.json  eval_llm_20260206.json  metrics_eval_openeval_20260206.json  metrics_extract_20260206.json
papers/2025.12.02.691876/: 2025.12.02.691876.source.xml
papers/2025.12.02.691876/20260206_anthropic/: claims.json  eval_llm.json  metrics_eval_openeval.json  metrics_extract.json
papers/2025.12.31.697063/: 2025.12.31.697063.source.xml
papers/2025.12.31.697063/20260206_anthropic/: claims.json  eval_llm.json  metrics_eval_openeval.json  metrics_extract.json
papers/eLife.66429/: compare_claims_report.json  compare_results_report.json  elife-66429-v2.md  elife-66429-v2.pdf.tei.xml
papers/nikbakht_diamond/: elife-66429-v2-segmented.pdf.tei.xml
templates/: index.html
(+15 files in other folders)
