[project]
name = "reviewer-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.8.0",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
]
